Add running applications in the grid

--- a/TopDock/Base.lproj/Main.storyboard
+++ b/TopDock/Base.lproj/Main.storyboard
@@ -26,24 +26,51 @@
             <objects>
                 <viewController storyboardIdentifier="MainController" id="XfG-lQ-9wD" customClass="MainController" customModule="TopDock" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="500" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="650" height="380"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZyP-We-rji">
-                                <rect key="frame" x="214" y="142" width="72" height="16"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Hello world" id="tUt-qg-Nxt">
-                                    <font key="font" usesAppearanceFont="YES"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
+                            <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xdO-Ai-gre">
+                                <rect key="frame" x="0.0" y="0.0" width="650" height="380"/>
+                                <clipView key="contentView" copiesOnScroll="NO" id="dwI-PU-2hV">
+                                    <rect key="frame" x="1" y="1" width="648" height="378"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <collectionView id="yBj-Ey-cse">
+                                            <rect key="frame" x="0.0" y="0.0" width="648" height="158"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="9" minimumLineSpacing="10" id="9Oc-7U-y28">
+                                                <size key="itemSize" width="80" height="80"/>
+                                                <edgeInsets key="sectionInset" left="10" right="10" top="10" bottom="10"/>
+                                            </collectionViewFlowLayout>
+                                            <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </collectionView>
+                                    </subviews>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="pzt-ro-9GZ">
+                                    <rect key="frame" x="1" y="144" width="233" height="15"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="9ir-OS-AGJ">
+                                    <rect key="frame" x="234" y="1" width="15" height="143"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="xdO-Ai-gre" secondAttribute="trailing" id="BAB-Su-zOl"/>
+                            <constraint firstAttribute="bottom" secondItem="xdO-Ai-gre" secondAttribute="bottom" id="fYp-O9-O1p"/>
+                            <constraint firstItem="xdO-Ai-gre" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="fmw-77-6Fo"/>
+                            <constraint firstItem="xdO-Ai-gre" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="ryd-dI-F8Q"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="yBj-Ey-cse" id="MXp-fx-Kc4"/>
+                        <outlet property="flowLayout" destination="9Oc-7U-y28" id="R52-Kw-zJN"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-268" y="365"/>
+            <point key="canvasLocation" x="-85" y="533"/>
         </scene>
     </scenes>
 </document>
